$Id: History,v 1.72 2003-01-13 08:50:10 vnivanch Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

13 jan 03: V.Ivant (stand-V05-00-01)
- Fix problem in cut control in G4PAIonisation.cc 

06 jan 03: V.Ivant (stand-V05-00-00)
- Update interfaces to STD classes in order to be ready to migrade 
  to "cut per region"

04 dec 02: V.Ivant (stand-V04-01-07)
- fix d-electron spectra for STD
     
20 nov 02: G.Cosmo (stand-V04-01-06)
- G4PAIonisation[.hh.icc.cc]: patched access to public static data.
  Added static accessor to be used in the kernel for inline functions
  to allow porting on Windows DLLs.

12 nov 02: V.Ivant (stand-V04-01-05)
- eBremsstrahlung::BuiltLossTable: fix of division by 0 (G4int nn)
 
28 oct 02: V.Ivant (stand-V04-01-04)
- fix compilation warnings for STD classes

17 oct 02: V.Ivant (stand-V04-01-03)
- few changes in all xSTD processes in connection with LossTableBuilder
    
15 oct 02: V.Ivant (stand-V04-01-02)
- redesign for a Model approach: files processNameSTD and processNameModel
     
14 oct 02: mma (stand-V04-01-01)
- G4PAIxSection and G4PAIonisation : put back on the HEAD the versions as they
  are in Geant4-04-01-ref-03, namely:
  G4PAIxSection  hh:1.7             cc:1.10